--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
             </p>
             <!-- TODO: Put the pigeons in love MP4 video here-->
             <video controls>
-                <source src="C:\Users\iplay\Subtitles\HTML-Subtitles-Captions\assets\videos\pigeons-in-love.mp4" type="video/mp4">
+                <source src="Subtitles\HTML-Subtitles-Captions\assets\videos\pigeons-in-love.mp4" type="video/mp4">
                 
 
 
             </video>
             <track
-                    src="C:\Users\iplay\Subtitles\HTML-Subtitles-Captions\assets\text-tracks\Pigeons-in-love-english"
+                    src="Subtitles\HTML-Subtitles-Captions\assets\text-tracks\Pigeons-in-love-english.vtt"
                     kind="subtitles"
                     srclang="en"
                     label="English"
 
             >
             <track
-                    src="C:\Users\iplay\Subtitles\HTML-Subtitles-Captions\assets\text-tracks\Pigeons-in-love-french"
+                    src="Subtitles\HTML-Subtitles-Captions\assets\text-tracks\Pigeons-in-love-french.vtt"
                     kind="subtitles"
                     srclang="en"
                     label="English"
